# geefetch

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .workflow-environment.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  mkdocs.yaml  pyproject.toml
.github/actions/test_installation/: action.yml
.github/workflows/: on_pr.yml  on_version_release.yml
benchmark/: cli.py  config.yaml  plotter.py  runner.py  utils.py
configs/: default.yaml  example_1.yaml  example_2.yaml  france.yaml  landes_sample.yaml
configs/example_1/: default.yaml  landsat8.yaml  s1.yaml  s2.yaml
configs/example_2/: base.yaml  default.yaml  s1.yaml  s2.yaml
docs/: configuration.md  contributing.md  environment.yml  getting-started.md  index.md  requirements.txt
docs/api/: downloadable_classes.md  downloadables.md  index.md  satellites.md  utils.md
docs/api/cli/: configuration.md
docs/api/core/: get.md  index.md  tiler.md
docs/examples/: index.md
docs/satellites/: custom.md  dynworld.md  gedi.md  index.md  landsat8.md  nasadem.md  palsar2.md  sentinel1.md  sentinel2.md  spectral_indices.md
docs/source/: api.rst  cli.rst  conf.py  geefetch.data.downloadables.geedim.rst  geefetch.data.downloadables.rst  geefetch.data.rst  geefetch.data.satellites.rst  geefetch.rst  geefetch.utils.rst  index.rst  installation.rst  modules.rst  readme.rst
docs/source/_static/: logo.icns
docs/source/apidoc/: geefetch.cli.rst  geefetch.data.downloadables.rst  geefetch.data.rst  geefetch.data.satellites.rst  geefetch.rst  geefetch.utils.rst  modules.rst
src/cli/: download_implementation.py  omegaconfig.py
src/geefetch/: __init__.py  coords.py  enums.py  log.py
src/geefetch/cli/: __init__.py  download_implementation.py  logging_implementation.py  logging_implemetation.py  main.py  omegaconfig.py  process_implementation.py
src/geefetch/data/: __init__.py  get.py  process.py  tiler.py
src/geefetch/data/downloadables/: __init__.py  abc.py  collection.py  geedim.py  image.py
src/geefetch/data/downloadables/geedim/: __init__.py  download.py  ee_stac_urls.json  enums.py  stac.py  tile.py  utils.py
src/geefetch/data/satellites/: __init__.py  abc.py  custom.py  dem.py  dynworld.py  gedi.py  gedi_2lb.py  landsat8.py  palsar2.py  s1.py  s2.py
src/geefetch/utils/: __init__.py  config.py  coords.py  enums.py  gee.py  geedim.py  geopandas.py  log.py  log_multiprocessing.py  multiprocessing.py  path.py  progress.py  progress_multiprocessing.py  rasterio.py  split.py  vegitation_index.py
src/geefetch/utils/spectral_indices/: __init__.py  band_mapping.py  enums.py  spectral_index.py
tests/: conftest.py  test_cli.py  test_download.py  unitests.py
tests/data/: cli_all_help.txt  cli_help.txt  paris_config.yaml
