[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geefetch"
description = "A Python library/CLI to download large scale satellite data from Google Earth Engine."
readme = "README.md"
authors = [
    {name = "Gabriel Belouze", email = "gabriel@belouze.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
license = {"file" = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "click",
    "earthengine-api",
    "geedim",
    "geobbox>=0.0.2",
    "geopandas>=1.0.1",
    "jsons",
    "numpy",
    "omegaconf",
    "pyarrow",
    "pooch",
    "retry",
    "rich",
    "shapely>=2.0.6",
    "thefuzz",
    "utm"
]

[tool.flit.module]
name = "geefetch"

[project.urls]
source = "https://github.com/gbelouze/geefetch"
tracker = "https://github.com/gbelouze/geefetch/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pre-commit",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon",
    "sphinx-click"
]

[project.scripts]
geefetch = "geefetch.cli:main"


[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = 3.11
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "geefetch.data.downloadables.geedim.*",
]
ignore_errors = true
