[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geefetch"
description = "A Python library/CLI to download large scale satellite data from Google Earth Engine."
readme = "README.md"
authors = [{ name = "Gabriel Belouze", email = "gabriel@belouze.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "click>=8.2.0",
    "earthengine-api",
    "gee_s1_processing",
    "geedim<2.0.0",
    "geobbox>=0.1.0",
    "geopandas>=1.0.1",
    "jsons",
    "numpy",
    "omegaconf",
    "pooch",
    "pyarrow",
    "rasterio>=1.3",
    "retry",
    "rich",
    "shapely>=2.0.6",
    "thefuzz",
]

[tool.flit.module]
name = "geefetch"

[project.urls]
source = "https://github.com/gbelouze/geefetch"
tracker = "https://github.com/gbelouze/geefetch/issues"

[project.optional-dependencies]
dev = [
    "dotenv",
    "mypy",
    "pre-commit",
    "pydoclint[flake8]",
    "pytest",
    "ruff",
    "types-requests",
    "types-retry",
]
doc = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.1",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-material>=9.6.7",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.16.2",
    "mkdocstrings>=0.28.2",
]

[project.scripts]
geefetch = "geefetch.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle and pydoclint
    # "D",
    "DOC",
    # flake8-use-pathlib
    "PTH",
    # flake8-logging
    "LOG",
    # flake8-no-pep420
    "INP",
    "PIE",
    "T20",
    # pytest
    "PT",
]
ignore = ["DOC501", "DOC201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["INP001"]
"docs/**/*.py" = ["INP001"]

[tool.pydoclint]
style = "numpy"
skip-checking-raises = true
check-style-mismatch = true
ignore = [
    "DOC201",
    "DOC202",
    "DOC402",
    "DOC403",
    "DOC501",
    "DOC501",
] # ignore what ruff implements

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow"]
log_cli = true
log_cli_level = "DEBUG"
log_level = "DEBUG"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = false
ignore_missing_imports = true
exclude = ['tests/test_download.py', 'tests/conftest.py']

[tool.pyright]
typeCheckingMode = "off"
pythonVersion = "3.11"
